Alignment fixes.

--- a/css/lesl.css
+++ b/css/lesl.css
@@ -37,6 +37,8 @@
 #lesl-title {
   background-color: #DEE0E3;
   margin-left: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 #lesl-header {
